--- a/config/config-sample.toml
+++ b/config/config-sample.toml
@@ -14,3 +14,10 @@ client_id = ""
 client_secret = ""
 redirect_uri = ""
 scppes = ["identity", "email"]
+jwt_secret=""
+
+
+[spotify]
+url = "https://api.spotify.com/v1/"
+secret = ""
+client_id = ""
