- replaced sqlite3 driver with one that is a pure golang implementation

--- a/config/config-sample.toml
+++ b/config/config-sample.toml
@@ -1,7 +1,7 @@
 #This is a sample for the configuration file for the server. It is in the TOML format.
 
 [database]
-database = "sqlite3"
+database = "sqlite"
 path = "/path/to/database.db"
 
 [song]
