- optimized asset loading - added new fields and filters - some front-end changes

--- a/.gitignore
+++ b/.gitignore
@@ -62,7 +62,7 @@ gen
 
 config/config.toml
 config/config.toml.old
-database.db
+database.db.bkp
 infrastructure/database/sql/fixtures/files/*.yml
 database.db.bkp
 
