--- a/.gitignore
+++ b/.gitignore
@@ -62,7 +62,7 @@ gen
 
 config/config.toml
 config/config.toml.old
-database.db.bkp
+database.db
 infrastructure/database/sql/fixtures/files/*.yml
 database.db.bkp
 
